corrected main z-index

--- a/docs/wp-content/themes/automovers/assets/css/main.css
+++ b/docs/wp-content/themes/automovers/assets/css/main.css
@@ -1131,6 +1131,7 @@ button.swiper-pagination-bullet {
   position: relative;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
 }
 
 .main:after {
@@ -1148,6 +1149,7 @@ button.swiper-pagination-bullet {
 
 .main__inner {
   position: absolute;
+  z-index: 120;
   width: 100%;
   max-width: 44rem;
   margin: 0 auto;
@@ -1386,10 +1388,6 @@ button.swiper-pagination-bullet {
 
   .socials {
     margin: 0 3rem 0 3rem;
-  }
-
-  .main {
-    max-height: 108rem;
   }
 
   .main__inner {
