--- a/src/components/sections/main/_main.scss
+++ b/src/components/sections/main/_main.scss
@@ -2,11 +2,12 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  overflow: hidden;
   // max-height: 108rem;
 
-  @media (min-width: 1440px) {
-    max-height: 108rem;
-  }
+  // @media (min-width: 1440px) {
+  //   max-height: 108rem;
+  // }
 
   &:after {
     position: absolute;
@@ -24,6 +25,7 @@
 
   &__inner {
     position: absolute;
+    z-index: 120;
     width: 100%;
     max-width: 44rem;
     margin: 0 auto;
